--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,9 @@
 [build-system]
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta:__legacy__"
+
+[tool.version_machine]
+
+    [tool.version_machine.__version__]
+    path = "inity/__version__.py"
+    increment_type = "patch"
